--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+:root {
+    --blue-primary: #293e50;
+    --white-primary: #f0f0f0;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -5,8 +10,8 @@
 }
 
 body {
-    background-color: #1d2a35;
-    color: #f0f0f0;
+    background-color: var(--blue-primary);
+    color: var(--white-primary);
 
     display: flex;
     flex-direction: column;
@@ -27,14 +32,14 @@ body {
 
     border-radius: 0.5rem;
     padding: 0.8rem;
-    background-color: #f0f0f0;
-    color: #1d2a35;
+    background-color: var(--white-primary);
+    color: var(--blue-primary);
 }
 
 .author > img {
     width: 8rem;
     border-radius: 100%;
-    border: 4px solid #1d2a35;
+    border: 4px solid var(--blue-primary);
 }
 
 .author_job {
@@ -44,7 +49,7 @@ body {
 
 .about_app {
     width: 100%;
-    border-bottom: 1px dashed #f0f0f0;
+    border-bottom: 1px dashed var(--white-primary);
     padding-bottom: 0.5rem;
     text-align: center;
 
@@ -63,8 +68,8 @@ form {
     padding: 0.8rem;
 
     border-radius: 4px;
-    background-color: #f0f0f0;
-    color: #1d2a35;
+    background-color: var(--white-primary);
+    color: var(--blue-primary);
     
     display: flex;
     flex-direction: column;
@@ -87,7 +92,7 @@ form {
 }
 
 #describe_task:focus {
-    border-color: #1d2a35;
+    border-color: var(--blue-primary);
 }
 
 .btn {
@@ -107,12 +112,12 @@ form {
 
 .bg_success {
     background-color: #07aa66;
-    color: #f0f0f0;
+    color: var(--white-primary);
 }
 
 .bg_danger {
     background-color: #a70404;
-    color: #f0f0f0;
+    color: var(--white-primary);
     font-weight: bold;
 }
 
@@ -122,14 +127,14 @@ form {
 
 .to_do_list {
     width: 100%;
-    background-color: #f0f0f0;
-    color: #1d2a35;
+    background-color: var(--white-primary);
+    color: var(--blue-primary);
     border-radius: 4px;
 }
 
 .to_do_list th {
-    background-color: #1d2a35;
-    color: #f0f0f0;
+    background-color: var(--blue-primary);
+    color: var(--white-primary);
     padding: 1rem;
 }
 
@@ -138,8 +143,8 @@ form {
 }
 
 .to_do_list td {
-    background-color: #f0f0f0;
-    color: #1d2a35;
+    background-color: var(--white-primary);
+    color: var(--blue-primary);
     padding: 1rem;
 }
 
